src/cocogen/ast.parser.output
Terminals unused in grammar

   "char value"
   "passes"
   "phases"
   "subphases"
   "to"


State 204 conflicts: 3 shift/reduce
State 205 conflicts: 3 shift/reduce
State 206 conflicts: 3 shift/reduce


Grammar

    0 $accept: root "End-of-file (EOF)"

    1 root: entries

    2 entries: entry ';' entries
    3        | entry
    4        | %empty

    5 entry: phase
    6      | pass
    7      | traversal
    8      | enum
    9      | nodeset
   10      | node

   11 prefix: "prefix" '=' "string value"

   12 phase: phaseheader '{' prefix ',' actionsbody '}'
   13      | phaseheader '{' prefix ',' "root" '=' "identifier" ',' actionsbody '}'

   14 actionsbody: "actions" '{' actions '}'

   15 actions: actions ',' action
   16        | action

   17 action: traversal
   18       | pass
   19       | phase
   20       | "identifier"

   21 phaseheader: "phase" "identifier"
   22            | "cycle" "identifier"
   23            | "start" "phase" "identifier"
   24            | "start" "cycle" "identifier"

   25 pass: "pass" "identifier" '{' prefix ',' "func" '=' "identifier" '}'
   26     | "pass" "identifier" '{' info ',' prefix ',' "func" '=' "identifier" '}'
   27     | "pass" "identifier" '{' info ',' prefix '}'
   28     | "pass" "identifier"

   29 traversal: "traversal" "identifier"
   30          | "traversal" "identifier" '{' prefix ',' func '}'
   31          | "traversal" "identifier" '{' prefix ',' func ',' traversalnodes '}'
   32          | "traversal" "identifier" '{' prefix ',' traversalnodes '}'
   33          | "traversal" "identifier" '{' info ',' prefix '}'
   34          | "traversal" "identifier" '{' info ',' prefix ',' func '}'
   35          | "traversal" "identifier" '{' info ',' prefix ',' func ',' traversalnodes '}'
   36          | "traversal" "identifier" '{' info ',' prefix ',' traversalnodes '}'

   37 func: "func" '=' "identifier"

   38 traversalnodes: "nodes" '=' setexpr

   39 enum: "enum" "identifier" '{' "prefix" '=' "identifier" ',' enumvalues '}'
   40     | "enum" "identifier" '{' enumvalues ',' "prefix" '=' "identifier" '}'
   41     | "enum" "identifier" '{' info ',' "prefix" '=' "identifier" ',' enumvalues '}'
   42     | "enum" "identifier" '{' info ',' enumvalues ',' "prefix" '=' "identifier" '}'

   43 $@1: %empty

   44 enumvalues: "values" '=' '{' $@1 idlist '}'

   45 nodeset: "nodeset" "identifier" '{' "nodes" '=' setexpr '}'
   46        | "nodeset" "identifier" '{' info ',' "nodes" '=' setexpr '}'

   47 setexpr: setoperation
   48        | '{' idlist '}'
   49        | "identifier"

   50 setoperation: setexpr '|' setexpr
   51             | setexpr '&' setexpr
   52             | setexpr '-' setexpr

   53 node: "node" "identifier" '{' nodebody '}'
   54     | "root" "node" "identifier" '{' nodebody '}'
   55     | "node" "identifier" '{' nodebody "lifetime" '{' lifetimelist '}' '}'

   56 nodebody: children ',' attrs
   57         | children
   58         | attrs
   59         | info ',' children ',' attrs
   60         | info ',' children
   61         | info ',' attrs

   62 lifetimelistwithvalues: lifetimelistwithvalues ',' lifetimewithvalues
   63                       | lifetimewithvalues

   64 lifetimewithvalues: "disallowed" rangespec_start "->" rangespec_end '=' '{' idlist '}'
   65                   | lifetime
   66                   | "disallowed" '=' '{' idlist '}'

   67 lifetimelist: lifetimelist ',' lifetime
   68             | lifetime

   69 lifetime: "disallowed" rangespec_start "->" rangespec_end
   70         | "disallowed"
   71         | "mandatory" rangespec_start "->" rangespec_end
   72         | "mandatory"

   73 namespacelist: namespacelist '.' "identifier"
   74              | "identifier"

   75 rangespec_start: '(' namespacelist
   76                | '('
   77                | '[' namespacelist

   78 rangespec_end: namespacelist ')'
   79              | ')'
   80              | namespacelist ']'

   81 children: "children" '{' childlist '}'

   82 childlist: childlist ',' child
   83          | child

   84 child: "identifier" "identifier"
   85      | "identifier" "identifier" '{' "construct" ',' lifetimelist '}'
   86      | "identifier" "identifier" '{' lifetimelist ',' "construct" '}'
   87      | "identifier" "identifier" '{' "construct" '}'
   88      | "identifier" "identifier" '{' lifetimelist '}'

   89 attrs: "attributes" '{' attrlist '}'

   90 attrlist: attrlist ',' attr
   91         | attr

   92 attr: attrhead '{' "construct" ',' lifetimelistwithvalues '}'
   93     | attrhead '{' "construct" '}'
   94     | attrhead '=' attrval

   95 attrhead: attrprimitivetype "identifier"
   96         | "identifier" "identifier"

   97 attrprimitivetype: "int"
   98                  | "int8"
   99                  | "int16"
  100                  | "int32"
  101                  | "int64"
  102                  | "uint"
  103                  | "uint8"
  104                  | "uint16"
  105                  | "uint32"
  106                  | "uint64"
  107                  | "float"
  108                  | "double"
  109                  | "bool"
  110                  | "string"

  111 attrval: "string value"
  112        | "integer value"
  113        | "unsigned integer value"
  114        | "float value"
  115        | "identifier"
  116        | "true"
  117        | "false"
  118        | "NULL"

  119 idlist: idlist ',' "identifier"
  120       | "identifier"

  121 info: "info" '=' "string value"


Terminals, with rules where they appear

"End-of-file (EOF)" (0) 0
'&' (38) 51
'(' (40) 75 76
')' (41) 78 79
',' (44) 12 13 15 25 26 27 30 31 32 33 34 35 36 39 40 41 42 46 56 59
    60 61 62 67 82 85 86 90 92 119
'-' (45) 52
'.' (46) 73
';' (59) 2
'=' (61) 11 13 25 26 37 38 39 40 41 42 44 45 46 64 66 94 121
'[' (91) 77
']' (93) 80
'{' (123) 12 13 14 25 26 27 30 31 32 33 34 35 36 39 40 41 42 44 45
    46 48 53 54 55 64 66 81 85 86 87 88 89 92 93
'|' (124) 50
'}' (125) 12 13 14 25 26 27 30 31 32 33 34 35 36 39 40 41 42 44 45
    46 48 53 54 55 64 66 81 85 86 87 88 89 92 93
error (256)
"integer value" <intval> (258) 112
"unsigned integer value" <uintval> (259) 113
"float value" <fval> (260) 114
"char value" <string> (261)
"string value" <string> (262) 11 111 121
"identifier" <string> (263) 13 20 21 22 23 24 25 26 27 28 29 30 31
    32 33 34 35 36 37 39 40 41 42 45 46 49 53 54 55 73 74 84 85 86
    87 88 95 96 115 119 120
"int" (264) 97
"uint" (265) 102
"int8" (266) 98
"int16" (267) 99
"int32" (268) 100
"int64" (269) 101
"uint8" (270) 103
"uint16" (271) 104
"uint32" (272) 105
"uint64" (273) 106
"bool" (274) 109
"true" (275) 116
"false" (276) 117
"attributes" (277) 89
"children" (278) 81
"construct" (279) 85 86 87 92 93
"cycle" (280) 22 24
"enum" (281) 39 40 41 42
"mandatory" (282) 71 72
"node" (283) 53 54 55
"nodes" (284) 38 45 46
"nodeset" (285) 45 46
"pass" (286) 25 26 27 28
"passes" (287)
"phase" (288) 21 23
"phases" (289)
"actions" (290) 14
"prefix" (291) 11 39 40 41 42
"info" (292) 121
"func" (293) 25 26 37
"root" (294) 13 54
"start" (295) 23 24
"subphases" (296)
"to" (297)
"traversal" (298) 29 30 31 32 33 34 35 36
"float" (299) 107
"double" (300) 108
"string" (301) 110
"values" (302) 44
"NULL" (303) 118
"lifetime" (304) 55
"disallowed" (305) 64 66 69 70
"->" (306) 64 69 71


Nonterminals, with rules where they appear

$accept (65)
    on left: 0
root <config> (66)
    on left: 1, on right: 0
entries (67)
    on left: 2 3 4, on right: 1 2
entry (68)
    on left: 5 6 7 8 9 10, on right: 2 3
prefix <string> (69)
    on left: 11, on right: 12 13 25 26 27 30 31 32 33 34 35 36
phase <phase> (70)
    on left: 12 13, on right: 5 19
actionsbody <array> (71)
    on left: 14, on right: 12 13
actions <array> (72)
    on left: 15 16, on right: 14 15
action <action> (73)
    on left: 17 18 19 20, on right: 15 16
phaseheader <phase> (74)
    on left: 21 22 23 24, on right: 12 13
pass <pass> (75)
    on left: 25 26 27 28, on right: 6 18
traversal <traversal> (76)
    on left: 29 30 31 32 33 34 35 36, on right: 7 17
func <string> (77)
    on left: 37, on right: 30 31 34 35
traversalnodes <setexpr> (78)
    on left: 38, on right: 31 32 35 36
enum <attr_enum> (79)
    on left: 39 40 41 42, on right: 8
enumvalues <array> (80)
    on left: 44, on right: 39 40 41 42
$@1 (81)
    on left: 43, on right: 44
nodeset <nodeset> (82)
    on left: 45 46, on right: 9
setexpr <setexpr> (83)
    on left: 47 48 49, on right: 38 45 46 50 51 52
setoperation <setoperation> (84)
    on left: 50 51 52, on right: 47
node <node> (85)
    on left: 53 54 55, on right: 10
nodebody <node> (86)
    on left: 56 57 58 59 60 61, on right: 53 54 55
lifetimelistwithvalues <array> (87)
    on left: 62 63, on right: 62 92
lifetimewithvalues <lifetime> (88)
    on left: 64 65 66, on right: 62 63
lifetimelist <array> (89)
    on left: 67 68, on right: 55 67 85 86 88
lifetime <lifetime> (90)
    on left: 69 70 71 72, on right: 65 67 68
namespacelist <array> (91)
    on left: 73 74, on right: 73 75 77 78 80
rangespec_start <range_spec> (92)
    on left: 75 76 77, on right: 64 69 71
rangespec_end <range_spec> (93)
    on left: 78 79 80, on right: 64 69 71
children <array> (94)
    on left: 81, on right: 56 57 59 60
childlist <array> (95)
    on left: 82 83, on right: 81 82
child <child> (96)
    on left: 84 85 86 87 88, on right: 82 83
attrs <array> (97)
    on left: 89, on right: 56 58 59 61
attrlist <array> (98)
    on left: 90 91, on right: 89 90
attr <attr> (99)
    on left: 92 93 94, on right: 90 91
attrhead <attr> (100)
    on left: 95 96, on right: 92 93 94
attrprimitivetype <attrtype> (101)
    on left: 97 98 99 100 101 102 103 104 105 106 107 108 109 110,
    on right: 95
attrval <attrval> (102)
    on left: 111 112 113 114 115 116 117 118, on right: 94
idlist <array> (103)
    on left: 119 120, on right: 44 48 64 66 119
info <string> (104)
    on left: 121, on right: 26 27 33 34 35 36 41 42 46 59 60 61


State 0

    0 $accept: . root "End-of-file (EOF)"

    "cycle"      shift, and go to state 1
    "enum"       shift, and go to state 2
    "node"       shift, and go to state 3
    "nodeset"    shift, and go to state 4
    "pass"       shift, and go to state 5
    "phase"      shift, and go to state 6
    "root"       shift, and go to state 7
    "start"      shift, and go to state 8
    "traversal"  shift, and go to state 9

    $default  reduce using rule 4 (entries)

    root         go to state 10
    entries      go to state 11
    entry        go to state 12
    phase        go to state 13
    phaseheader  go to state 14
    pass         go to state 15
    traversal    go to state 16
    enum         go to state 17
    nodeset      go to state 18
    node         go to state 19


State 1

   22 phaseheader: "cycle" . "identifier"

    "identifier"  shift, and go to state 20


State 2

   39 enum: "enum" . "identifier" '{' "prefix" '=' "identifier" ',' enumvalues '}'
   40     | "enum" . "identifier" '{' enumvalues ',' "prefix" '=' "identifier" '}'
   41     | "enum" . "identifier" '{' info ',' "prefix" '=' "identifier" ',' enumvalues '}'
   42     | "enum" . "identifier" '{' info ',' enumvalues ',' "prefix" '=' "identifier" '}'

    "identifier"  shift, and go to state 21


State 3

   53 node: "node" . "identifier" '{' nodebody '}'
   55     | "node" . "identifier" '{' nodebody "lifetime" '{' lifetimelist '}' '}'

    "identifier"  shift, and go to state 22


State 4

   45 nodeset: "nodeset" . "identifier" '{' "nodes" '=' setexpr '}'
   46        | "nodeset" . "identifier" '{' info ',' "nodes" '=' setexpr '}'

    "identifier"  shift, and go to state 23


State 5

   25 pass: "pass" . "identifier" '{' prefix ',' "func" '=' "identifier" '}'
   26     | "pass" . "identifier" '{' info ',' prefix ',' "func" '=' "identifier" '}'
   27     | "pass" . "identifier" '{' info ',' prefix '}'
   28     | "pass" . "identifier"

    "identifier"  shift, and go to state 24


State 6

   21 phaseheader: "phase" . "identifier"

    "identifier"  shift, and go to state 25


State 7

   54 node: "root" . "node" "identifier" '{' nodebody '}'

    "node"  shift, and go to state 26


State 8

   23 phaseheader: "start" . "phase" "identifier"
   24            | "start" . "cycle" "identifier"

    "cycle"  shift, and go to state 27
    "phase"  shift, and go to state 28


State 9

   29 traversal: "traversal" . "identifier"
   30          | "traversal" . "identifier" '{' prefix ',' func '}'
   31          | "traversal" . "identifier" '{' prefix ',' func ',' traversalnodes '}'
   32          | "traversal" . "identifier" '{' prefix ',' traversalnodes '}'
   33          | "traversal" . "identifier" '{' info ',' prefix '}'
   34          | "traversal" . "identifier" '{' info ',' prefix ',' func '}'
   35          | "traversal" . "identifier" '{' info ',' prefix ',' func ',' traversalnodes '}'
   36          | "traversal" . "identifier" '{' info ',' prefix ',' traversalnodes '}'

    "identifier"  shift, and go to state 29


State 10

    0 $accept: root . "End-of-file (EOF)"

    "End-of-file (EOF)"  shift, and go to state 30


State 11

    1 root: entries .

    $default  reduce using rule 1 (root)


State 12

    2 entries: entry . ';' entries
    3        | entry .

    ';'  shift, and go to state 31

    $default  reduce using rule 3 (entries)


State 13

    5 entry: phase .

    $default  reduce using rule 5 (entry)


State 14

   12 phase: phaseheader . '{' prefix ',' actionsbody '}'
   13      | phaseheader . '{' prefix ',' "root" '=' "identifier" ',' actionsbody '}'

    '{'  shift, and go to state 32


State 15

    6 entry: pass .

    $default  reduce using rule 6 (entry)


State 16

    7 entry: traversal .

    $default  reduce using rule 7 (entry)


State 17

    8 entry: enum .

    $default  reduce using rule 8 (entry)


State 18

    9 entry: nodeset .

    $default  reduce using rule 9 (entry)


State 19

   10 entry: node .

    $default  reduce using rule 10 (entry)


State 20

   22 phaseheader: "cycle" "identifier" .

    $default  reduce using rule 22 (phaseheader)


State 21

   39 enum: "enum" "identifier" . '{' "prefix" '=' "identifier" ',' enumvalues '}'
   40     | "enum" "identifier" . '{' enumvalues ',' "prefix" '=' "identifier" '}'
   41     | "enum" "identifier" . '{' info ',' "prefix" '=' "identifier" ',' enumvalues '}'
   42     | "enum" "identifier" . '{' info ',' enumvalues ',' "prefix" '=' "identifier" '}'

    '{'  shift, and go to state 33


State 22

   53 node: "node" "identifier" . '{' nodebody '}'
   55     | "node" "identifier" . '{' nodebody "lifetime" '{' lifetimelist '}' '}'

    '{'  shift, and go to state 34


State 23

   45 nodeset: "nodeset" "identifier" . '{' "nodes" '=' setexpr '}'
   46        | "nodeset" "identifier" . '{' info ',' "nodes" '=' setexpr '}'

    '{'  shift, and go to state 35


State 24

   25 pass: "pass" "identifier" . '{' prefix ',' "func" '=' "identifier" '}'
   26     | "pass" "identifier" . '{' info ',' prefix ',' "func" '=' "identifier" '}'
   27     | "pass" "identifier" . '{' info ',' prefix '}'
   28     | "pass" "identifier" .

    '{'  shift, and go to state 36

    $default  reduce using rule 28 (pass)


State 25

   21 phaseheader: "phase" "identifier" .

    $default  reduce using rule 21 (phaseheader)


State 26

   54 node: "root" "node" . "identifier" '{' nodebody '}'

    "identifier"  shift, and go to state 37


State 27

   24 phaseheader: "start" "cycle" . "identifier"

    "identifier"  shift, and go to state 38


State 28

   23 phaseheader: "start" "phase" . "identifier"

    "identifier"  shift, and go to state 39


State 29

   29 traversal: "traversal" "identifier" .
   30          | "traversal" "identifier" . '{' prefix ',' func '}'
   31          | "traversal" "identifier" . '{' prefix ',' func ',' traversalnodes '}'
   32          | "traversal" "identifier" . '{' prefix ',' traversalnodes '}'
   33          | "traversal" "identifier" . '{' info ',' prefix '}'
   34          | "traversal" "identifier" . '{' info ',' prefix ',' func '}'
   35          | "traversal" "identifier" . '{' info ',' prefix ',' func ',' traversalnodes '}'
   36          | "traversal" "identifier" . '{' info ',' prefix ',' traversalnodes '}'

    '{'  shift, and go to state 40

    $default  reduce using rule 29 (traversal)


State 30

    0 $accept: root "End-of-file (EOF)" .

    $default  accept


State 31

    2 entries: entry ';' . entries

    "cycle"      shift, and go to state 1
    "enum"       shift, and go to state 2
    "node"       shift, and go to state 3
    "nodeset"    shift, and go to state 4
    "pass"       shift, and go to state 5
    "phase"      shift, and go to state 6
    "root"       shift, and go to state 7
    "start"      shift, and go to state 8
    "traversal"  shift, and go to state 9

    $default  reduce using rule 4 (entries)

    entries      go to state 41
    entry        go to state 12
    phase        go to state 13
    phaseheader  go to state 14
    pass         go to state 15
    traversal    go to state 16
    enum         go to state 17
    nodeset      go to state 18
    node         go to state 19


State 32

   12 phase: phaseheader '{' . prefix ',' actionsbody '}'
   13      | phaseheader '{' . prefix ',' "root" '=' "identifier" ',' actionsbody '}'

    "prefix"  shift, and go to state 42

    prefix  go to state 43


State 33

   39 enum: "enum" "identifier" '{' . "prefix" '=' "identifier" ',' enumvalues '}'
   40     | "enum" "identifier" '{' . enumvalues ',' "prefix" '=' "identifier" '}'
   41     | "enum" "identifier" '{' . info ',' "prefix" '=' "identifier" ',' enumvalues '}'
   42     | "enum" "identifier" '{' . info ',' enumvalues ',' "prefix" '=' "identifier" '}'

    "prefix"  shift, and go to state 44
    "info"    shift, and go to state 45
    "values"  shift, and go to state 46

    enumvalues  go to state 47
    info        go to state 48


State 34

   53 node: "node" "identifier" '{' . nodebody '}'
   55     | "node" "identifier" '{' . nodebody "lifetime" '{' lifetimelist '}' '}'

    "attributes"  shift, and go to state 49
    "children"    shift, and go to state 50
    "info"        shift, and go to state 45

    nodebody  go to state 51
    children  go to state 52
    attrs     go to state 53
    info      go to state 54


State 35

   45 nodeset: "nodeset" "identifier" '{' . "nodes" '=' setexpr '}'
   46        | "nodeset" "identifier" '{' . info ',' "nodes" '=' setexpr '}'

    "nodes"  shift, and go to state 55
    "info"   shift, and go to state 45

    info  go to state 56


State 36

   25 pass: "pass" "identifier" '{' . prefix ',' "func" '=' "identifier" '}'
   26     | "pass" "identifier" '{' . info ',' prefix ',' "func" '=' "identifier" '}'
   27     | "pass" "identifier" '{' . info ',' prefix '}'

    "prefix"  shift, and go to state 42
    "info"    shift, and go to state 45

    prefix  go to state 57
    info    go to state 58


State 37

   54 node: "root" "node" "identifier" . '{' nodebody '}'

    '{'  shift, and go to state 59


State 38

   24 phaseheader: "start" "cycle" "identifier" .

    $default  reduce using rule 24 (phaseheader)


State 39

   23 phaseheader: "start" "phase" "identifier" .

    $default  reduce using rule 23 (phaseheader)


State 40

   30 traversal: "traversal" "identifier" '{' . prefix ',' func '}'
   31          | "traversal" "identifier" '{' . prefix ',' func ',' traversalnodes '}'
   32          | "traversal" "identifier" '{' . prefix ',' traversalnodes '}'
   33          | "traversal" "identifier" '{' . info ',' prefix '}'
   34          | "traversal" "identifier" '{' . info ',' prefix ',' func '}'
   35          | "traversal" "identifier" '{' . info ',' prefix ',' func ',' traversalnodes '}'
   36          | "traversal" "identifier" '{' . info ',' prefix ',' traversalnodes '}'

    "prefix"  shift, and go to state 42
    "info"    shift, and go to state 45

    prefix  go to state 60
    info    go to state 61


State 41

    2 entries: entry ';' entries .

    $default  reduce using rule 2 (entries)


State 42

   11 prefix: "prefix" . '=' "string value"

    '='  shift, and go to state 62


State 43

   12 phase: phaseheader '{' prefix . ',' actionsbody '}'
   13      | phaseheader '{' prefix . ',' "root" '=' "identifier" ',' actionsbody '}'

    ','  shift, and go to state 63


State 44

   39 enum: "enum" "identifier" '{' "prefix" . '=' "identifier" ',' enumvalues '}'

    '='  shift, and go to state 64


State 45

  121 info: "info" . '=' "string value"

    '='  shift, and go to state 65


State 46

   44 enumvalues: "values" . '=' '{' $@1 idlist '}'

    '='  shift, and go to state 66


State 47

   40 enum: "enum" "identifier" '{' enumvalues . ',' "prefix" '=' "identifier" '}'

    ','  shift, and go to state 67


State 48

   41 enum: "enum" "identifier" '{' info . ',' "prefix" '=' "identifier" ',' enumvalues '}'
   42     | "enum" "identifier" '{' info . ',' enumvalues ',' "prefix" '=' "identifier" '}'

    ','  shift, and go to state 68


State 49

   89 attrs: "attributes" . '{' attrlist '}'

    '{'  shift, and go to state 69


State 50

   81 children: "children" . '{' childlist '}'

    '{'  shift, and go to state 70


State 51

   53 node: "node" "identifier" '{' nodebody . '}'
   55     | "node" "identifier" '{' nodebody . "lifetime" '{' lifetimelist '}' '}'

    "lifetime"  shift, and go to state 71
    '}'         shift, and go to state 72


State 52

   56 nodebody: children . ',' attrs
   57         | children .

    ','  shift, and go to state 73

    $default  reduce using rule 57 (nodebody)


State 53

   58 nodebody: attrs .

    $default  reduce using rule 58 (nodebody)


State 54

   59 nodebody: info . ',' children ',' attrs
   60         | info . ',' children
   61         | info . ',' attrs

    ','  shift, and go to state 74


State 55

   45 nodeset: "nodeset" "identifier" '{' "nodes" . '=' setexpr '}'

    '='  shift, and go to state 75


State 56

   46 nodeset: "nodeset" "identifier" '{' info . ',' "nodes" '=' setexpr '}'

    ','  shift, and go to state 76


State 57

   25 pass: "pass" "identifier" '{' prefix . ',' "func" '=' "identifier" '}'

    ','  shift, and go to state 77


State 58

   26 pass: "pass" "identifier" '{' info . ',' prefix ',' "func" '=' "identifier" '}'
   27     | "pass" "identifier" '{' info . ',' prefix '}'

    ','  shift, and go to state 78


State 59

   54 node: "root" "node" "identifier" '{' . nodebody '}'

    "attributes"  shift, and go to state 49
    "children"    shift, and go to state 50
    "info"        shift, and go to state 45

    nodebody  go to state 79
    children  go to state 52
    attrs     go to state 53
    info      go to state 54


State 60

   30 traversal: "traversal" "identifier" '{' prefix . ',' func '}'
   31          | "traversal" "identifier" '{' prefix . ',' func ',' traversalnodes '}'
   32          | "traversal" "identifier" '{' prefix . ',' traversalnodes '}'

    ','  shift, and go to state 80


State 61

   33 traversal: "traversal" "identifier" '{' info . ',' prefix '}'
   34          | "traversal" "identifier" '{' info . ',' prefix ',' func '}'
   35          | "traversal" "identifier" '{' info . ',' prefix ',' func ',' traversalnodes '}'
   36          | "traversal" "identifier" '{' info . ',' prefix ',' traversalnodes '}'

    ','  shift, and go to state 81


State 62

   11 prefix: "prefix" '=' . "string value"

    "string value"  shift, and go to state 82


State 63

   12 phase: phaseheader '{' prefix ',' . actionsbody '}'
   13      | phaseheader '{' prefix ',' . "root" '=' "identifier" ',' actionsbody '}'

    "actions"  shift, and go to state 83
    "root"     shift, and go to state 84

    actionsbody  go to state 85


State 64

   39 enum: "enum" "identifier" '{' "prefix" '=' . "identifier" ',' enumvalues '}'

    "identifier"  shift, and go to state 86


State 65

  121 info: "info" '=' . "string value"

    "string value"  shift, and go to state 87


State 66

   44 enumvalues: "values" '=' . '{' $@1 idlist '}'

    '{'  shift, and go to state 88


State 67

   40 enum: "enum" "identifier" '{' enumvalues ',' . "prefix" '=' "identifier" '}'

    "prefix"  shift, and go to state 89


State 68

   41 enum: "enum" "identifier" '{' info ',' . "prefix" '=' "identifier" ',' enumvalues '}'
   42     | "enum" "identifier" '{' info ',' . enumvalues ',' "prefix" '=' "identifier" '}'

    "prefix"  shift, and go to state 90
    "values"  shift, and go to state 46

    enumvalues  go to state 91


State 69

   89 attrs: "attributes" '{' . attrlist '}'

    "identifier"  shift, and go to state 92
    "int"         shift, and go to state 93
    "uint"        shift, and go to state 94
    "int8"        shift, and go to state 95
    "int16"       shift, and go to state 96
    "int32"       shift, and go to state 97
    "int64"       shift, and go to state 98
    "uint8"       shift, and go to state 99
    "uint16"      shift, and go to state 100
    "uint32"      shift, and go to state 101
    "uint64"      shift, and go to state 102
    "bool"        shift, and go to state 103
    "float"       shift, and go to state 104
    "double"      shift, and go to state 105
    "string"      shift, and go to state 106

    attrlist           go to state 107
    attr               go to state 108
    attrhead           go to state 109
    attrprimitivetype  go to state 110


State 70

   81 children: "children" '{' . childlist '}'

    "identifier"  shift, and go to state 111

    childlist  go to state 112
    child      go to state 113


State 71

   55 node: "node" "identifier" '{' nodebody "lifetime" . '{' lifetimelist '}' '}'

    '{'  shift, and go to state 114


State 72

   53 node: "node" "identifier" '{' nodebody '}' .

    $default  reduce using rule 53 (node)


State 73

   56 nodebody: children ',' . attrs

    "attributes"  shift, and go to state 49

    attrs  go to state 115


State 74

   59 nodebody: info ',' . children ',' attrs
   60         | info ',' . children
   61         | info ',' . attrs

    "attributes"  shift, and go to state 49
    "children"    shift, and go to state 50

    children  go to state 116
    attrs     go to state 117


State 75

   45 nodeset: "nodeset" "identifier" '{' "nodes" '=' . setexpr '}'

    "identifier"  shift, and go to state 118
    '{'           shift, and go to state 119

    setexpr       go to state 120
    setoperation  go to state 121


State 76

   46 nodeset: "nodeset" "identifier" '{' info ',' . "nodes" '=' setexpr '}'

    "nodes"  shift, and go to state 122


State 77

   25 pass: "pass" "identifier" '{' prefix ',' . "func" '=' "identifier" '}'

    "func"  shift, and go to state 123


State 78

   26 pass: "pass" "identifier" '{' info ',' . prefix ',' "func" '=' "identifier" '}'
   27     | "pass" "identifier" '{' info ',' . prefix '}'

    "prefix"  shift, and go to state 42

    prefix  go to state 124


State 79

   54 node: "root" "node" "identifier" '{' nodebody . '}'

    '}'  shift, and go to state 125


State 80

   30 traversal: "traversal" "identifier" '{' prefix ',' . func '}'
   31          | "traversal" "identifier" '{' prefix ',' . func ',' traversalnodes '}'
   32          | "traversal" "identifier" '{' prefix ',' . traversalnodes '}'

    "nodes"  shift, and go to state 126
    "func"   shift, and go to state 127

    func            go to state 128
    traversalnodes  go to state 129


State 81

   33 traversal: "traversal" "identifier" '{' info ',' . prefix '}'
   34          | "traversal" "identifier" '{' info ',' . prefix ',' func '}'
   35          | "traversal" "identifier" '{' info ',' . prefix ',' func ',' traversalnodes '}'
   36          | "traversal" "identifier" '{' info ',' . prefix ',' traversalnodes '}'

    "prefix"  shift, and go to state 42

    prefix  go to state 130


State 82

   11 prefix: "prefix" '=' "string value" .

    $default  reduce using rule 11 (prefix)


State 83

   14 actionsbody: "actions" . '{' actions '}'

    '{'  shift, and go to state 131


State 84

   13 phase: phaseheader '{' prefix ',' "root" . '=' "identifier" ',' actionsbody '}'

    '='  shift, and go to state 132


State 85

   12 phase: phaseheader '{' prefix ',' actionsbody . '}'

    '}'  shift, and go to state 133


State 86

   39 enum: "enum" "identifier" '{' "prefix" '=' "identifier" . ',' enumvalues '}'

    ','  shift, and go to state 134


State 87

  121 info: "info" '=' "string value" .

    $default  reduce using rule 121 (info)


State 88

   44 enumvalues: "values" '=' '{' . $@1 idlist '}'

    $default  reduce using rule 43 ($@1)

    $@1  go to state 135


State 89

   40 enum: "enum" "identifier" '{' enumvalues ',' "prefix" . '=' "identifier" '}'

    '='  shift, and go to state 136


State 90

   41 enum: "enum" "identifier" '{' info ',' "prefix" . '=' "identifier" ',' enumvalues '}'

    '='  shift, and go to state 137


State 91

   42 enum: "enum" "identifier" '{' info ',' enumvalues . ',' "prefix" '=' "identifier" '}'

    ','  shift, and go to state 138


State 92

   96 attrhead: "identifier" . "identifier"

    "identifier"  shift, and go to state 139


State 93

   97 attrprimitivetype: "int" .

    $default  reduce using rule 97 (attrprimitivetype)


State 94

  102 attrprimitivetype: "uint" .

    $default  reduce using rule 102 (attrprimitivetype)


State 95

   98 attrprimitivetype: "int8" .

    $default  reduce using rule 98 (attrprimitivetype)


State 96

   99 attrprimitivetype: "int16" .

    $default  reduce using rule 99 (attrprimitivetype)


State 97

  100 attrprimitivetype: "int32" .

    $default  reduce using rule 100 (attrprimitivetype)


State 98

  101 attrprimitivetype: "int64" .

    $default  reduce using rule 101 (attrprimitivetype)


State 99

  103 attrprimitivetype: "uint8" .

    $default  reduce using rule 103 (attrprimitivetype)


State 100

  104 attrprimitivetype: "uint16" .

    $default  reduce using rule 104 (attrprimitivetype)


State 101

  105 attrprimitivetype: "uint32" .

    $default  reduce using rule 105 (attrprimitivetype)


State 102

  106 attrprimitivetype: "uint64" .

    $default  reduce using rule 106 (attrprimitivetype)


State 103

  109 attrprimitivetype: "bool" .

    $default  reduce using rule 109 (attrprimitivetype)


State 104

  107 attrprimitivetype: "float" .

    $default  reduce using rule 107 (attrprimitivetype)


State 105

  108 attrprimitivetype: "double" .

    $default  reduce using rule 108 (attrprimitivetype)


State 106

  110 attrprimitivetype: "string" .

    $default  reduce using rule 110 (attrprimitivetype)


State 107

   89 attrs: "attributes" '{' attrlist . '}'
   90 attrlist: attrlist . ',' attr

    ','  shift, and go to state 140
    '}'  shift, and go to state 141


State 108

   91 attrlist: attr .

    $default  reduce using rule 91 (attrlist)


State 109

   92 attr: attrhead . '{' "construct" ',' lifetimelistwithvalues '}'
   93     | attrhead . '{' "construct" '}'
   94     | attrhead . '=' attrval

    '='  shift, and go to state 142
    '{'  shift, and go to state 143


State 110

   95 attrhead: attrprimitivetype . "identifier"

    "identifier"  shift, and go to state 144


State 111

   84 child: "identifier" . "identifier"
   85      | "identifier" . "identifier" '{' "construct" ',' lifetimelist '}'
   86      | "identifier" . "identifier" '{' lifetimelist ',' "construct" '}'
   87      | "identifier" . "identifier" '{' "construct" '}'
   88      | "identifier" . "identifier" '{' lifetimelist '}'

    "identifier"  shift, and go to state 145


State 112

   81 children: "children" '{' childlist . '}'
   82 childlist: childlist . ',' child

    ','  shift, and go to state 146
    '}'  shift, and go to state 147


State 113

   83 childlist: child .

    $default  reduce using rule 83 (childlist)


State 114

   55 node: "node" "identifier" '{' nodebody "lifetime" '{' . lifetimelist '}' '}'

    "mandatory"   shift, and go to state 148
    "disallowed"  shift, and go to state 149

    lifetimelist  go to state 150
    lifetime      go to state 151


State 115

   56 nodebody: children ',' attrs .

    $default  reduce using rule 56 (nodebody)


State 116

   59 nodebody: info ',' children . ',' attrs
   60         | info ',' children .

    ','  shift, and go to state 152

    $default  reduce using rule 60 (nodebody)


State 117

   61 nodebody: info ',' attrs .

    $default  reduce using rule 61 (nodebody)


State 118

   49 setexpr: "identifier" .

    $default  reduce using rule 49 (setexpr)


State 119

   48 setexpr: '{' . idlist '}'

    "identifier"  shift, and go to state 153

    idlist  go to state 154


State 120

   45 nodeset: "nodeset" "identifier" '{' "nodes" '=' setexpr . '}'
   50 setoperation: setexpr . '|' setexpr
   51             | setexpr . '&' setexpr
   52             | setexpr . '-' setexpr

    '}'  shift, and go to state 155
    '|'  shift, and go to state 156
    '&'  shift, and go to state 157
    '-'  shift, and go to state 158


State 121

   47 setexpr: setoperation .

    $default  reduce using rule 47 (setexpr)


State 122

   46 nodeset: "nodeset" "identifier" '{' info ',' "nodes" . '=' setexpr '}'

    '='  shift, and go to state 159


State 123

   25 pass: "pass" "identifier" '{' prefix ',' "func" . '=' "identifier" '}'

    '='  shift, and go to state 160


State 124

   26 pass: "pass" "identifier" '{' info ',' prefix . ',' "func" '=' "identifier" '}'
   27     | "pass" "identifier" '{' info ',' prefix . '}'
